# life-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.rc
src/: app.cpp  app.h  cell.cpp  cell.h  constants.h  main.cpp
